lateral scrollbar fix

--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -11,8 +11,8 @@
 
 body {
 	text-wrap: pretty;
-	display: grid; // Put footer at the bottom for short pages, such as the 404
-	grid-template-rows: auto minmax(auto, 1fr) auto; // Header, stuff, footer
+	display: grid;
+	grid-template-rows: auto minmax(auto, 1fr) auto; 
 	grid-template-areas:
 		"nav"
 		"main"
@@ -41,14 +41,11 @@ body {
 	}
 }
 
-// Style text selection to use accent color
 ::selection {
 	background-color: var(--accent-color);
 	color: var(--contrast-color);
 }
 
-// Make focused anchor not get covered by nav,
-// and flash it with accent color when jumping to it
 :target:not(#main-content) {
 	transition:
 		all var(--transition),
@@ -58,14 +55,12 @@ body {
 	text-shadow: var(--text-shadow-glow);
 }
 
-// Custom focus indicator
 :focus-visible {
 	animation: focus-in var(--transition);
 	outline: 0.125rem solid var(--accent-color);
 	outline-offset: 0.125rem;
 }
 
-// Fallback for older browsers
 @supports not selector(:focus-visible) {
 	:focus {
 		animation: focus-in var(--transition);
@@ -137,4 +132,8 @@ main {
 		animation-duration: 0s !important;
 		transition-duration: 0s !important;
 	}
+}
+
+html, body {
+  overflow-x: hidden;
 }
